--- a/public/paper.html
+++ b/public/paper.html
@@ -1,7 +1,28 @@
-<a href="/rock">Play rock</a>
+<!DOCTYPE html>
 
-<h2>We played paper!</h2>
+<html>
+  <head>
+    <title>
+      You played paper!
+    </title>
+    <meta charset="utf-8">
+  </head>
 
-<h2>They played paper!</h2>
+  <body>
+    <div>
+      <a href="/rock">Play rock</a>
+    </div>
+    <div>
+      <a href="/paper">Play paper</a>
+    </div>
+    <div>
+      <a href="/scissors">Play scissors</a>
+    </div>
+    
+    <h2>We played paper!</h2>
+    <h2>They played paper!</h2>
+    <h2>We tied!</h2>
 
-<h2>We tied!</h2>
+    <a href="/">Rules</a>
+  </body>
+</html>
