--- a/public/scissors.html
+++ b/public/scissors.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>
-      You played rock!
+      You played scissors!
     </title>
     <meta charset="utf-8">
   </head>
@@ -19,9 +19,9 @@
       <a href="/scissors">Play scissors</a>
     </div>
     
-    <h2>We played rock!</h2>
+    <h2>We played scissors!</h2>
     <h2>They played paper!</h2>
-    <h2>We lost!</h2>
+    <h2>We won!</h2>
 
     <a href="/">Rules</a>
   </body>
