--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,36 @@
 
   <body>
     <h1>Welcome!</h1>
+    
+    <table border="1">
+      <tr>
+        <td colspan="3">
+          hi
+        </td>
+
+        <td  rowspan="2">
+          hi
+        </td>
+
+      </tr>
+      <tr>
+        <td>
+          hi number 2
+        </td>
+
+        <td>
+          hi number 2
+        </td>
+        <td>
+          hi number 2
+        </td><td>
+          hi number 2
+        </td>
+      </tr>
+    </table>
+
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Mushi-ken_%28%E8%99%AB%E6%8B%B3%29%2C_Japanese_rock-paper-scissors_variant%2C_from_the_Kensarae_sumai_zue_%281809%29.jpg/640px-Mushi-ken_%28%E8%99%AB%E6%8B%B3%29%2C_Japanese_rock-paper-scissors_variant%2C_from_the_Kensarae_sumai_zue_%281809%29.jpg">
 
   </body>
 </html>
